--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=exam_jee
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/confesalle-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/examjee-db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Elgrandejcole03
 spring.jpa.hibernate.ddl-auto=create-drop
