--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.5.5.Final</version>
+            <scope>provided</scope>
+        </dependency>
         <!--<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
